Fixes display issue on iOS/safari

--- a/web/app/styles.css
+++ b/web/app/styles.css
@@ -38,6 +38,7 @@ body {
 
 .shell main {
   position: relative;
+  height: 100%;
   background-color: #dbdbd3;
   flex-grow: 1;
   z-index: 1;
